--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -14,7 +14,7 @@
                 <h1 style="margin-top: 40px;">Expensify</h1>
                 <h4 style="color: grey;text-align: justify;margin-top: 40px;">Expensify is the best money manager & daily expense tracker to automatically and securely track your monthly spends. Stay within budget, pay bills on time and SAVE more every month. Find out how much you spend on food, shopping, groceries, etc. and how you are saving month on month. Manage all your monthly expenses, budgets and bills very easily at your fingertips.</h4>
                 <div style="margin-top: 30px;margin-bottom: 30px;">
-                    <a href="/signup"><button class="btn btn-info btn-lg">Create an account</button></a>
+                    <a href="/auth/signup"><button class="btn btn-info btn-lg">Create an account</button></a>
                 </div>
             </div>
             
