--- a/views/users/addexpense.ejs
+++ b/views/users/addexpense.ejs
@@ -10,7 +10,7 @@
             <div class="col-sm-4" style="border: 1px solid lightgrey;border-radius: 5px;">
                 <h3>Add Expense or Income</h3>
                 <div>
-                    <form action="/add" method="POST" style="margin-bottom: 20px;">
+                    <form action="/profile/add" method="POST" style="margin-bottom: 20px;">
                         <div class="form-group">
                             <% 
                             if(error!="") {
@@ -41,21 +41,15 @@
                             <textarea name="desc" id="" cols="30" rows="5" class="form-control" style="resize: none;" placeholder="A brief description about your expense."></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="amount">Amount (use - for debit) : </label>
+                            <label for="amount">Amount  : </label>
                             <input type="number" name="amount" id="amount" class="form-control" placeholder="Amount spent in digits">
                         </div>
                         <div class="form-group">
                             <label for="type">Expense Type : </label>
-                            <input type="text" name="type" id="type" placeholder="e.x. Electricity, Grocery, etc" class="form-control" list="types">
-                            <datalist id="types">
-                                <option value="Salary">
-                                <option value="Pocket Money">
-                                <option value="Grocery">
-                                <option value="Electric Appliances">
-                                <option value="Shopping">
-                                <option value="Clothes">
-                                <option value="Transportation">
-                            </datalist>
+                            <select name="type" id="type" class="form-control">
+                                <option value="credit">Credit</option>
+                                <option value="debit">Debit</option>
+                            </select>
                         </div>
                         
                         <div class="form-group">
